--- a/config.cfg
+++ b/config.cfg
@@ -9,6 +9,8 @@ NAV_POS_X                     1300
 NAV_POS_Y                     0
 CAM_RESOLUTION                1280x800
 
+NAV_WIDTH                     800
+NAV_HEIGHT                    600
 CAM_WIDTH                     400
 CAM_HEIGHT                    300
 CAM_INTERVAL                  20
