output update and pause added

--- a/config.cfg
+++ b/config.cfg
@@ -11,20 +11,20 @@ CAM_RESOLUTION                1280x800
 
 NAV_WIDTH                     800
 NAV_HEIGHT                    600
-CAM_WIDTH                     400
-CAM_HEIGHT                    300
-CAM_INTERVAL                  20
+CAM_WIDTH                     341
+CAM_HEIGHT                    256
+CAM_INTERVAL                  50
 
 CAM_DRIVER                    DIRECT3D9
 CAM_POS_X                     0
 CAM_POS_Y                     0
 
 # general configuration
-SCENARIO_FILE                 "C:\UAV Simulation Networked\scenario\UAVEditor1.uav"
+SCENARIO_FILE                 "C:\sims\uav_cameras_target_rec\source\scenario\UAVEditor2.uav"
 OUTPUT_FILE                   "video"
 TIMESTAMP_OUTPUT              1
-FUEL_FACTOR                   0.00025
-SPEED_FACTOR                  35
+FUEL_FACTOR                   0.0
+SPEED_FACTOR                  25
 DOWN_ANGLE                    45
 ZOOM_NEAR_TARGET              0
 FEATURE_VISIBLE_DIST          150
@@ -34,10 +34,10 @@ SHOW_VERSION                  1
 SHOW_TIME                     1
 USE_GPS_FAIL                  1
 ALLOW_SPEED_CHANGES           1
-ALLOW_PAUSE                   0
+ALLOW_PAUSE                   1
 USE_CAMERA_FAIL               1
 CAM_FAIL_AS_ANGLE             0
-SHOW_PROGRESS_BAR             0
+SHOW_PROGRESS_BAR             1
 BUTTON_CLICK_MS               200
 
 # map interface
